@@ -1,7 +1,11 @@
 2003-04-12  Brian Warner  <warner@lothar.com>
 
+	* twisted/test/process_signal.py: reset SIGHUP to default handler,
+	fixes test failures in a 'nohup' environment
+
 	* twisted/test/test_process.py (PosixProcessTestCasePTY): remove
 	testClosePty.todo now that it works
+	(SignalProtocol.processEnded): Improve testSignal error messages
 
 	* twisted/internet/process.py (PTYProcess.connectionLost): Treat
 	PTYs more like sockets: loseConnection sets .disconnecting and
